--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
               <a href="#portfolio" class="footer__link">Portfolio</a>
             </li>
             <li>
-              <a href="#contact" class="footer__link">Contacts</a>
+              <a href="#contact" class="footer__link">Contact</a>
             </li>
           </ul>
 
